<resources>
    <string name="app_name">Countries Information</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="country_fragment_name">Countries</string>
    <string name="country_detail_fragment_name">Country Details</string>
    <string name="select_country">Choose a Country</string>
    <string name="capital">Capital:</string>
    <string name="population">Population:</string>
    <string name="area">Area:</string>
    <string name="subregion">SubRegion:</string>
    <string name="region">Region:</string>
    <string name="loading">Loading..</string>

    <string name="server_error">Unable to fetch Country Details [Server Error]</string>
    <string name="network_error">Network Error, Please connect to Internet and try again</string>
    <string name="unconfined_error">Something went wrong, Please try later</string>
    <string name="search_menu">Search</string>
    <string name="sort_menu">Sort</string>
    <string name="please_fine_tune_the_filters_to_see_results">Please fine tune the filters to see results</string>
</resources>